Update meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We specialise in Electrical Installations and Testing of fixed Electrical Installations, Maintenance, Electric Charging Units, Security Access Control Systems, Full Office Refurbishments and Full Laboratory Refurbishments."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
