--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="We specialise in Electrical Installations and Testing of fixed Electrical Installations, Maintenance, Electric Charging Units, Security Access Control Systems, Full Office Refurbishments and Full Laboratory Refurbishments."
+      content="Electrical Installations, Testing of Electrical Installations, Maintenance, Electric Charging Units, Security Systems, Full Office and Laboratory Refurbishments."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SES Building Services</title>
+    <title>SES Building Services Limited</title>
   </head>
   <body>
 
