Attempt to fix google description

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="Electrical Installations, Testing of Electrical Installations, Maintenance, Electric Charging Units, Security Systems, Full Office and Laboratory Refurbishments."
     />
+	<meta name="robots" content="noodp,noydir" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
